# Crud-with-auth

backend/: pyproject.toml
backend/crud/: db.sqlite3
backend/crud/blogs/: models.py  urls.py  views.py
backend/crud/blogs/migrations/: 0001_initial.py
backend/crud/crud/: settings.py  urls.py
backend/crud/user/: managers.py  models.py  urls.py  views.py
backend/crud/user/migrations/: 0001_initial.py  0002_alter_customuser_gender.py  0003_customuser_isdeleted.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: AppNavBar.vue  DisplayAllData.vue  FormComponent.vue  NavBar.vue  TailwindComp.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: AllBlogs.vue  DisplayAllData.vue  EditPage.vue  FormComponent.vue  PostBlog.vue  SignUp.vue  UserBLogs.vue
